2012-08-01  Borut Razem  <borutr@users.sourceforge.net>
  * doc/gputils.lyx:
    documented __config deprecation for 16-bit PIC MCU devices

2012-07-31  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c:
    print word value in code sction with undefined nibbles repleced by "?"

2012-07-28  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c: idata and idata_acs directives are not available
    for 12-bit instruction width (PIC10, some PIC12/PIC16) devices,
    according to "MPASM Assembler, MPLINK Object Linker, MPLIB Object
    Librarian User’s Guide"

2012-07-25  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gparchive.c, libgputils/gpreadobj.c, gpasm/parse.y,
    gpasm/cod.c, gplink/script.c, gplink/cod.c, gputils/dump.c
    gputils/block.c: fixed warnings, additional tests for object and
    arhive file consistency
  * gplink/testsuite/gplink.project/lkrfiles/badbank1.lkr,
    gplink/testsuite/gplink.project/lkrfiles/badpage1.lkr,
    gplink/testsuite/gplink.project/lkrfiles/gblconflict.lkr,
    gplink/testsuite/gplink.project/lkrfiles/absconflict.lkr,
    gplink/testsuite/gplink.project/lkrfiles/reloc12.lkr,
    gplink/testsuite/gplink.project/lkrfiles/reloc14.lkr,
    gplink/testsuite/gplink.project/lkrfiles/memseg.lkr,
    gplink/testsuite/gplink.project/lkrfiles/fullbank1.lkr,
    gplink/testsuite/gplink.project/lkrfiles/accesso.lkr,
    gplink/testsuite/gplink.project/lkrfiles/fullpage1.lkr,
    gplink/testsuite/gplink.project/lkrfiles/reloc16e.lkr,
    gplink/testsuite/test: fixed device .lkr file names

2012-07-24  Molnar Karoly  <proton7@freemail.hu>
  * lkr/12c509a_g.lkr, lkr/12c509_g.lkr, lkr/12ce519_g.lkr,
    lkr/12cr509a_g.lkr, lkr/16c505_g.lkr, lkr/16f1786_g.lkr,
    lkr/16f1787_g.lkr, lkr/16lf1786_g.lkr, lkr/16lf1787_g.lkr,
    lkr/rf509af_g.lkr, lkr/rf509ag_g.lkr:
    Correct the SECTION NAME=PROG entries.

2012-07-24  Molnar Karoly  <proton7@freemail.hu>
  * doc/gputils.lyx: